--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
-#heading {
-    color: red;
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
 }
+
+.logo {
+    width: 100px
+}
+
+.nav-items ul {
+    display: flex;
+}
+
+.nav-items ul li {
+    padding: 24px;
+    list-style-type: none;
+}
+
